Added some information on permissions.